--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Ankur Kumar</title>
@@ -7,9 +6,18 @@
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
-  <div >
+  <div class="top-container">
+    <img src="images/cloud.png" alt="cloud-img">
     <h1>I'm Ankur</h1>
     <p>A Programmer.</p>
+    <img src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="cloud-img">
+  </div>
+  <div class="middle-container">
+
+  </div>
+  <div class="bottom-container">
+
   </div>
 
   </body>
